commit admission score forecast